--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,4 +10,9 @@
             "source.organizeImports.ruff": "explicit"
         }
       },
+      "python.testing.pytestArgs": [
+        "src"
+      ],
+      "python.testing.unittestEnabled": false,
+      "python.testing.pytestEnabled": true,
 }
