--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "pydantic>=2.11.4",
     "pydantic-ai[logfire]>=0.2.0",
     "pydantic-settings>=2.9.1",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "pytest-dotenv>=0.5.2",
     "sqlalchemy[asyncio]>=2.0.41",
 ]
 
@@ -46,3 +49,18 @@ exclude = [
     "**/typings",
 ]
 reportMissingTypeStubs = false
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+testpaths = ["src/tests"]
+asyncio_default_fixture_loop_scope = "session"
+asyncio_default_test_loop_scope = "session"
+asyncio_mode = "auto"
+addopts = "-ra -q"
+log_cli = true
+log_cli_level = "INFO"
+markers = [
+    "unit: unit tests",
+    "integration: integration tests",
+]
+env_files = [".env"]
